test/types/enum/diten/paramEnumOutOfBounds2.good
paramEnumOutOfBounds2.chpl:3: error: cannot cast 'int(64)' to abstract enum type 'enumt'
