test/types/enum/diten/paramEnumOutOfBounds2.chpl
enum enumt { A, B, C };
config param val=0;
var x = val:enumt;
